--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -10,15 +10,15 @@
         {% include 'partials/_alert.html' %}
         <div class="card">
           <div class="card-header bg-primary text-white">
-            <h4><i class="fas fa-sign-in-alt"></i> Login</h4>
+            <h4><i class="fas fa-sign-in-alt"></i> 登入</h4>
           </div>
           <div class="card-body">
             
-            <p>Please use the following form to log-in. If you don't have an account <a href="{% url "accounts:register" %}">register here</a>.</p>
+            <p>如有帳號, 請使用以下表單登入。 <a href="{% url "accounts:register" %}">註冊</a>.</p>
             <form action="{% url 'accounts:login' %}" method="POST">
               {% csrf_token %}
               <div class="form-group">
-                <label for="username">Username</label>
+                <label for="username">用戶名稱</label>
                 <input
                     type="text"
                     name="username"
@@ -28,7 +28,7 @@
               </div>
 
               <div class="form-group">
-                <label for="password2">Password</label>
+                <label for="password2">密碼</label>
                 <input
                     type="password"
                     name="password"
@@ -39,12 +39,12 @@
 
               <input
                 type="submit"
-                value="Login"
+                value="登入"
                 class="btn btn-secondary btn-block"
               />
             </form>
             <p></p>
-            <p><a href="{% url "accounts:reset_password" %}">Forgotten your password?</a></p>
+            <p><a href="{% url "accounts:reset_password" %}">忘記密碼？</a></p>
           </div>
         </div>
       </div>
