--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                 ${{ cart.get_total_price }}
               </a>
             {% elif not order %}
-              Your cart is empty.
+              您的購物車是空的。
             {% endif %}
           {% endwith %}
         </div>
