--- a/templates/orders/order/create.html
+++ b/templates/orders/order/create.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 
 {% block title %}
-  Checkout
+  結帳
 {% endblock %}
 
 {% block content %}
    
   <div class="container mb-20 p-2">
-    <h1>Checkout</h1>
+    <h1>結帳</h1>
     <div class="order-info">
-      <h3>Your order</h3>
+      <h3>你的購物清單</h3>
       <ul>
         {% for item in cart %}
           <li>
@@ -25,9 +25,9 @@
         {% endif %}
       </ul>
       {% if cart.coupon is None %}
-        <p>Total: ${{ cart.get_total_price }}</p>
+        <p>總數: ${{ cart.get_total_price }}</p>
       {% else %}
-        <p>Total: ${{ cart.get_total_price_after_discount|floatformat:2 }}</p>
+        <p>總數: ${{ cart.get_total_price_after_discount|floatformat:2 }}</p>
       {% endif %}
     </div>
     
@@ -36,28 +36,28 @@
           <div class="row form-row">
               <div class="col-md-6 mb-3">                 
                   <div class="input-group-icon">
-                      <i class="fas fa-user"></i> <label for="id_first_name" class="form-label ml-1">First Name <span class="required-asterisk">*</span></label>
+                      <i class="fas fa-user"></i> <label for="id_first_name" class="form-label ml-1">名 <span class="required-asterisk">*</span></label>
                       <input type="text" name="first_name" class="form-control prefilled-value" id="id_first_name" value="{{current_user.first_name}}" readonly>
-                      <div class="form-note">Pre-filled from your account</div>
+                      <div class="form-note">已從您的帳戶預先填寫</div>
                   </div>
               </div>
             </div>
             <div class="row form-row">
               <div class="col-md-6 mb-3">                 
                   <div class="input-group-icon">
-                    <i class="fas fa-user"></i> <label for="id_last_name" class="form-label ml-1">Last Name <span class="required-asterisk">*</span></label>
+                    <i class="fas fa-user"></i> <label for="id_last_name" class="form-label ml-1">姓 <span class="required-asterisk">*</span></label>
                     <input type="text" name="last_name" class="form-control prefilled-value" id="id_last_name" value="{{current_user.last_name}}" readonly>
                   </div>
-                  <div class="form-note">Pre-filled from your account</div>
+                  <div class="form-note">已從您的帳戶預先填寫</div>
               </div>
             </div>            
             <div class="row form-row">
               <div class="col-md-6 mb-3">               
                 <div class="input-group-icon">
-                    <i class="fas fa-home"></i> <label for="id_address" class="form-label ml-1">Address <span class="required-asterisk">*</span></label>
+                    <i class="fas fa-home"></i> <label for="id_address" class="form-label ml-1">地址 <span class="required-asterisk">*</span></label>
                     <input type="text" name="address" class="form-control" id="id_address" placeholder="Enter your street address" value="{{current_user.address}}" required/>
                 </div>
-                <div class="form-note">Please include apartment/suite number if applicable</div>
+                <div class="form-note">請提供送貨地址</div>
               </div>
             </div>
             <div class="row form-row">
@@ -67,13 +67,13 @@
                     <i class="fas fa-envelope"></i><label for="id_email" class="form-label ml-1">Email <span class="required-asterisk">*</span></label>
                     <input type="text" name="email" class="form-control prefilled-value" id="id_email" value="{{current_user.email}}" required>
                   </div>
-                  <div class="form-note">Pre-filled from your account</div>
+                  <div class="form-note">已從您的帳戶預先填寫</div>
               </div>
             </div>
             <div class="row form-row" style="display:normal;">
               <div class="col-md-6 mb-3">                  
                   <div class="input-group-icon">
-                    <i class="fas fa-map-marker-alt"></i><label for="id_postal_code" class="form-label ml-1">Postal code <span class="required-asterisk">*</span></label>
+                    <i class="fas fa-map-marker-alt"></i><label for="id_postal_code" class="form-label ml-1">郵遞區號<span class="required-asterisk">*</span></label>
                     <input type="text" name="postal_code" class="form-control prefilled-value" id="id_postal_code" value="{{current_user.postal_code}}" required>
                   </div>                  
               </div>
@@ -82,14 +82,14 @@
               <div class="col-md-6 mb-3">
                   
                   <div class="input-group-icon">
-                    <i class="fas fa-city"></i><label for="id_city" class="form-label ml-1">City<span class="required-asterisk">*</span></label>
+                    <i class="fas fa-city"></i><label for="id_city" class="form-label ml-1">城市<span class="required-asterisk">*</span></label>
                     <input type="text" name="city" class="form-control prefilled-value" id="id_city" value="{{current_user.city}}" required>
                   </div>                  
               </div>
             </div>
             
             <button type="submit" class="btn btn-place-order bg-info">
-                <i class="fas fa-check-circle me-2"></i>Place Order
+                <i class="fas fa-check-circle me-2"></i>落單
             </button>
           
           
