--- a/templates/shopCart/detail.html
+++ b/templates/shopCart/detail.html
@@ -2,23 +2,23 @@
 {% load static %}
 
 {% block title %}
-  Your shopping cart
+  您的購物車
 {% endblock %}
 
 {% block content %}
   
   <div class="container">
-  <h1>Your shopping cart</h1>
+  <h1>您的購物車</h1>
   
   <table class="cart">
     <thead>
       <tr>
-        <th>Image</th>
-        <th>Product</th>
-        <th>Quantity</th>
-        <th>Remove</th>
-        <th>Unit price</th>
-        <th>Price</th>
+        <th>圖片</th>
+        <th>菜餚</th>
+        <th>數量</th>
+        <th>取消</th>
+        <th>取消</th>
+        <th>價格</th>
       </tr>
     </thead>
     <tbody>
@@ -35,7 +35,7 @@
               <form action="{% url 'cart:cart_add' product.id %}" method="post">
                 {{ item.update_quantity_form.quantity }}
                 {{ item.update_quantity_form.override }}
-                <input type="submit" value="Update">
+                <input type="submit" value="更新">
                 {% csrf_token %}
               </form>
             </td>
@@ -46,7 +46,7 @@
                 data-toggle="modal"
                 data-target="#deleteConfirmModal"
                 data-id="{{product.id}}" 
-                value="Remove"
+                value="删除"
               >
             </td>
             <td class="num">${{ item.price }}</td>
@@ -56,7 +56,7 @@
       {% endfor %}
       {% if cart.coupon %}
         <tr class="subtotal">
-          <td>Subtotal</td>
+          <td>小計</td>
           <td colspan="4"></td>
           <td class="num">${{ cart.get_total_price|floatformat:2 }}</td>
         </tr>
@@ -72,7 +72,7 @@
         </tr>
       {% endif %}
       <tr class="total">
-        <td>Total</td>
+        <td>總數</td>
         <td colspan="4"></td>
         <td class="num">
           ${{ cart.get_total_price_after_discount|floatformat:2 }}
@@ -81,32 +81,32 @@
     </tbody>
   </table>
 
-  <p>Apply a coupon:</p>
+  <p>使用優惠券</p>
   <form action="{% url "coupons:apply" %}" method="post">
     {{ coupon_apply_form }}
-    <input type="submit" value="Apply">
-    <button id='RemoveCouponbtn' style="background:#5993bb;font-size:14px;color:white;border-radius:4px;padding:10px 20px;border:0" type="button" value="" onClick="location.href='/coupons/remove'">Remove Coupons</button>
+    <input type="submit" value="使用">
+    <button id='RemoveCouponbtn' style="background:#5993bb;font-size:14px;color:white;border-radius:4px;padding:10px 20px;border:0" type="button" value="" onClick="location.href='/coupons/remove'">删除優惠券</button>
     {% csrf_token %}
   </form>
   <p class="text-right">
     <a href="{% url 'pages:product_list' %}" class="button
-    light">Continue shopping</a>
-    <a href="{% url 'orders:order_create' %}" class="button">Checkout</a>
+    light">繼續購物</a>
+    <a href="{% url 'orders:order_create' %}" class="button">完成選購</a>
   </p>
 <!--delete modal-->
 <div class="modal fade" id="deleteConfirmModal" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="deleteModalLabel">Confirm DELETE</h5>
+        <h5 class="modal-title" id="deleteModalLabel">確認刪除</h5>
         <button class="close" type="button" data-dismiss="modal">
           &times;
         </button>
       </div>
       <div class="modal-body">
-        <p>Are you sure you want to remove this product from your shopping cart?</p>
-        <a href="" class="btn btn-danger" id="confirmDeleteBtn">Yes</a>
-        <button class="btn btn-info" data-dismiss="modal">Cancel</button>
+        <p>您確定要將此商品從購物車中移除嗎？</p>
+        <a href="" class="btn btn-danger" id="confirmDeleteBtn">是</a>
+        <button class="btn btn-info" data-dismiss="modal">不了</button>
       </div>
     </div>
   </div>
