translate accounts into chinese

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%}
 <!-- tab title -->
- {% block title%} | Login {% endblock %}
+ {% block title%} | 登入 {% endblock %}
 {% block content%}
 
 <section id="login" class="bg-light py-5">
