--- a/templates/accounts/password_change_done.html
+++ b/templates/accounts/password_change_done.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 
-{% block title %}Password changed{% endblock %}
+{% block title %}密碼已更改{% endblock %}
 
 {% block content %}
   
   <div class="container" style="height:100%;">
-    <h1>Password changed</h1>
+    <h1>密碼已更改</h1>
     <div class="row" style="height:600px;">
         <div class="col-md-6">
-            <p>Your password has been successfully changed. You can <a href="{% url "accounts:login" %}">log in now</a></p>
+            <p>重設密碼成功 <a href="{% url "accounts:login" %}">現在登入</a></p>
         </div>
     </div>
   </div>
