--- a/templates/accounts/password_reset_confirm.html
+++ b/templates/accounts/password_reset_confirm.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}重設密碼{% endblock %}
 
 {% block content %}
-  <h1>Reset your password</h1>
+  <h1>重設密碼</h1>
   {% if validlink %}
-    <p>Please enter your new password twice:</p>
+    <p>請輸入兩次您的新密碼：</p>
     <form method="post">
       {{ form.as_p }}
       {% csrf_token %}
-      <p><input type="submit" value="Change my password" /></p>
+      <p><input type="submit" value="更改我的密碼" /></p>
     </form>
   {% else %}
-    <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
+    <p>密碼重置連結無效，可能是因為該連結已被使用。請重新申請密碼重置。</p>
   {% endif %}
 {% endblock %}
