--- a/templates/accounts/password_reset_form.html
+++ b/templates/accounts/password_reset_form.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}重設密碼{% endblock %}
 
 {% block content %}
   <div class="container mt-5 mb-5">
     <div class="row justify-content-center text-center">
       <div class="col-md-6 p-4 border rounded shadow-sm bg-light">
         
-        <h1>Forgotten your password?</h1>
-        <p class="text-muted">Enter your e-mail address to obtain a new password.</p>
+        <h1>忘記密碼了？</h1>
+        <p class="text-muted">請輸入您的電子郵件地址以取得新密碼。</p>
         
         <form method="post" class="mt-4">
           {% csrf_token %}
