--- a/templates/accounts/reset_password_done.html
+++ b/templates/accounts/reset_password_done.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Reset Email Sent{% endblock %}
+{% block title %}重置已傳送的電子郵件{% endblock %}
 
 {% block content %}
 <div class="container py-5">
@@ -8,27 +8,25 @@
         <div class="col-md-6 col-lg-5">
             <div class="card shadow text-center">
                 <div class="card-header bg-info text-white">
-                    <h4 class="mb-0"><i class="fas fa-envelope me-2"></i>Check Your Email</h4>
+                    <h4 class="mb-0"><i class="fas fa-envelope me-2"></i>檢查您的電子郵件</h4>
                 </div>
                 <div class="card-body p-5">
                     <div class="mb-4">
                         <i class="fas fa-envelope fa-5x text-info"></i>
                     </div>
-                    <h3 class="card-title mb-3">Password Reset Email Sent</h3>
+                    <h3 class="card-title mb-3">密碼重設郵件已發送</h3>
                     <p class="card-text mb-4">
-                        We've emailed you instructions for setting your password. 
-                        You should receive them shortly.
+                        您很快就會收到我們已透過電子郵件向您發送了設定密碼的說明。
                     </p>
                     <p class="text-muted">
-                        If you don't receive an email, please make sure you've entered the address you registered with, 
-                        and check your spam folder.
+                        如果您沒有收到郵件，請確保您輸入的是您註冊時使用的郵箱地址，並檢查您的垃圾郵件資料夾。
                     </p>
                     <div class="d-grid gap-2">
                         <a href="{% url 'accounts:login' %}" class="btn btn-primary">
-                            <i class="fas fa-sign-in-alt me-2"></i>Return to Login
+                            <i class="fas fa-sign-in-alt me-2"></i>返回登入
                         </a>
                         <a href="{% url 'pages:product_list' %}" class="btn btn-outline-secondary">
-                            <i class="fas fa-home me-2"></i>Return to Home
+                            <i class="fas fa-home me-2"></i>回首頁
                         </a>
                     </div>
                 </div>
