--- a/templates/accounts/reset_password_email.html
+++ b/templates/accounts/reset_password_email.html
@@ -1,16 +1,15 @@
 {% autoescape off %}
-Hello {{ user.get_username }},
+你好{{ user.get_username }},
 
-You're receiving this email because you requested a password reset for your account at {{ site_name }}.
+您收到此郵件是因為您申請重設了您帳戶的密碼。 {{ site_name }}.
 
-Please click the link below to reset your password:
+請點擊下方連結重設密碼：
 
 {{ reset_url }}
+如果點擊上面的連結不起作用，請將網址複製並貼上到新的瀏覽器視窗中。
 
-If clicking the link above doesn't work, please copy and paste the URL in a new browser window instead.
+如果您沒有申請重設密碼，請忽略此郵件。您的密碼不會被更改。
 
-If you didn't request this password reset, please ignore this email. Your password won't be changed.
-
-Thank you,
-The {{ site_name }} Team
+謝謝你，
+ {{ site_name }}
 {% endautoescape %}
