--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="{% static 'css/admin.css' %}" />
 <a href="{% url 'pages:product_list'%}">
 <img
-  src="{% static 'img/logo.png' %}"
+  src="{% static 'img/new_logo.png' %}"
   alt="ERB8 Logo"
   class="brand_img"
   height="35"
