--- a/templates/accounts/change_password.html
+++ b/templates/accounts/change_password.html
@@ -6,7 +6,7 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <h3 class="text-center">Change Password</h3>
+                    <h3 class="text-center">更改密碼</h3>
                 </div>
                 <div class="card-body">
                     {% if messages %}
@@ -31,26 +31,26 @@
                         {% endif %}
                         
                         <div class="form-group mb-3">
-                            <label for="{{ form.old_password.id_for_label }}">Current Password</label>
+                            <label for="{{ form.old_password.id_for_label }}">目前密碼</label>
                             {{ form.old_password }}
                         </div>
                         
                         <div class="form-group mb-3">
-                            <label for="{{ form.new_password1.id_for_label }}">New Password</label>
+                            <label for="{{ form.new_password1.id_for_label }}">新密碼</label>
                             {{ form.new_password1 }}
                             <small class="form-text text-muted">
-                                Password must be at least 8 characters long.
+                                密碼長度必須至少為 8 個字元。
                             </small>
                         </div>
                         
                         <div class="form-group mb-3">
-                            <label for="{{ form.new_password2.id_for_label }}">Confirm New Password</label>
+                            <label for="{{ form.new_password2.id_for_label }}">確認新密碼</label>
                             {{ form.new_password2 }}
                         </div>
                         
                         <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-primary">Change Password</button>
-                            <a href="{% url 'pages:product_list' %}" class="btn btn-secondary">Cancel</a>
+                            <button type="submit" class="btn btn-primary">更改密碼</button>
+                            <a href="{% url 'pages:product_list' %}" class="btn btn-secondary">取消</a>
                         </div>
                     </form>
                 </div>
