--- a/templates/accounts/change_password_done.html
+++ b/templates/accounts/change_password_done.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Password Changed Successfully{% endblock %}
+{% block title %}密碼已成功更改{% endblock %}
 
 {% block content %}
 <div class="container py-5">
@@ -8,22 +8,22 @@
         <div class="col-md-6 col-lg-5">
             <div class="card shadow text-center">
                 <div class="card-header bg-success text-white">
-                    <h4 class="mb-0"><i class="fas fa-check-circle me-2"></i>Success!</h4>
+                    <h4 class="mb-0"><i class="fas fa-check-circle me-2"></i>成功!</h4>
                 </div>
                 <div class="card-body p-5">
                     <div class="mb-4">
                         <i class="fas fa-check-circle fa-5x text-success"></i>
                     </div>
-                    <h3 class="card-title mb-3">Password Changed Successfully</h3>
+                    <h3 class="card-title mb-3">密碼已成功更改</h3>
                     <p class="card-text mb-4">
-                        Your password has been updated successfully. You can now use your new password to log in.
+                        您的密碼已成功更新。現在您可以使用新密碼登入。
                     </p>
                     <div class="d-grid gap-2">
                         <a href="{% url 'accounts:login' %}" class="btn btn-primary">
-                            <i class="fas fa-user me-2"></i>Go to Login
+                            <i class="fas fa-user me-2"></i>前往登入
                         </a>
                         <a href="{% url 'pages:product_list' %}" class="btn btn-outline-secondary">
-                            <i class="fas fa-home me-2"></i>Return to Product List
+                            <i class="fas fa-home me-2"></i>返回菜餚列表
                         </a>
                     </div>
                 </div>
