--- a/templates/accounts/logged_out.html
+++ b/templates/accounts/logged_out.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}Logged out{% endblock %}
+{% block title %}登出{% endblock %}
 
 {% block content %}
-  <h1>Logged out</h1>
+  <h1>登出</h1>
   <p>
-    You have been successfully logged out.
-    You can <a href="{% url "login" %}">log-in again</a>.
+    您已成功登出。
+    您已成功 <a href="{% url "login" %}">再次登入</a>.
   </p>
 {% endblock %}
