--- a/templates/accounts/password_change_form.html
+++ b/templates/accounts/password_change_form.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}Change your password{% endblock %}
+{% block title %}重設密碼{% endblock %}
 
 {% block content %}
   <div class="container mb-20 p-2">
-    <h1>Change your password</h1>
-    <p>Use the form below to change your password.</p>
+    <h1>重設密碼</h1>
+    <p>請使用下面的表格更改您的密碼。</p>
     <!-- <form method="post">
       {{ form.as_p }}
       <p><input type="submit" value="Change"></p>
