--- a/templates/accounts/password_reset_complete.html
+++ b/templates/accounts/password_reset_complete.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Password reset{% endblock %}
+{% block title %}重設密碼{% endblock %}
 
 {% block content %}
   <div class="container" style="height:100%;">
-    <h1>Password set</h1>
-    <p>Your password has been set. You can <a href="{% url "accounts:login" %}">log in now</a></p>
+    <h1>重設密碼成功</h1>
+    <p>重設密碼成功 <a href="{% url "accounts:login" %}">現在登入</a></p>
   </div>
 {% endblock %}
