--- a/templates/accounts/password_reset_done.html
+++ b/templates/accounts/password_reset_done.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}重設密碼{% endblock %}
 
 {% block content %}
   <div class="container" style="height:100%;">
-    <h1>Reset your password</h1>
+    <h1>重設密碼</h1>
     <div class="row" style="height:600px;">
         <div class="col-md-6">
-             <p>We've emailed you instructions for setting your password.</p>
-            <p>If you don't receive an email, please make sure you've entered the address you registered with.</p>
+             <p>我們已透過電子郵件向您發送了設定密碼的說明。</p>
+            <p>如果您沒有收到電子郵件，請確保您輸入的是您註冊時使用的地址。</p>
         </div>
     </div>
   </div>
