--- a/templates/accounts/password_reset_email.html
+++ b/templates/accounts/password_reset_email.html
@@ -1,3 +1,3 @@
-Someone asked for password reset for email {{ email }}. Follow the link below:
+有人要求重設電子郵件密碼 {{ email }}. 請點擊下面的鏈接:
 {{ protocol }}://{{ domain }}{% url "accounts:password_reset_confirm" uidb64=uid token=token %}
-Your username, in case you've forgotten: {{ user.get_username }}
+你的用戶名，以防你忘記了: {{ user.get_username }}
