--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%}
 <!-- tab title -->
- {% block title%} | Login {% endblock %}
+ {% block title%} | 登入 {% endblock %}
 {% block content%}
 
 <h1>{{user.username}}</h1>
