--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%}
 <!-- tab title -->
- {% block title%} | Register {% endblock %}
+ {% block title%} | 登記 {% endblock %}
 {% block content%}
 <section id="register" class="bg-light py-5">
       <div class="container">
@@ -9,18 +9,18 @@
             {% include 'partials/_alert.html' %}
             <div class="card">
               <div class="card-header bg-primary text-white">
-                <h4><i class="fas fa-user-plus"></i> Register</h4>
+                <h4><i class="fas fa-user-plus"></i> 登記</h4>
               </div>
               <div class="card-body">
                 <form action="{% url 'accounts:register' %}" method='POST'>
                     {% csrf_token %}
                     <div class="form-group">
-                        <label for="first_name">First Name</label>
+                        <label for="first_name">名</label>
                         {% comment %} <input id="first_name"  type="text"  name="first_name"  class="form-control"  required/> {% endcomment %}
                         <input id="first_name"  type="text"  name="first_name"  class="form-control"  required/>
                     </div>
                     <div class="form-group">
-                        <label for="last_name">Last Name</label>
+                        <label for="last_name">姓</label>
                         <input
                             id="last_name"
                             type="text"
@@ -30,7 +30,7 @@
                         />
                     </div>
                     <div class="form-group">
-                        <label for="username">Username</label>
+                        <label for="username">使用者名稱</label>
                         <input
                             id="username"
                             type="text"
@@ -40,7 +40,7 @@
                         />
                     </div>
                     <div class="form-group">
-                        <label for="email">Email</label>
+                        <label for="email">電子郵件</label>
                         <input
                         id="email"
                             type="email"
@@ -50,7 +50,7 @@
                         />
                     </div>
                     <div class="form-group">
-                        <label for="password">Password</label>
+                        <label for="password">密碼</label>
                         <input
                         id="password"
                             type="password"
@@ -60,7 +60,7 @@
                         />
                     </div>
                     <div class="form-group">
-                        <label for="password2">Confirm Password</label>
+                        <label for="password2">確認密碼</label>
                         <input
                             id="password2"
                             type="password"
