--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,34 +1,35 @@
+{% load i18n %}
 <!-- Footer -->
     <footer id="main-footer" class="py-4 text-white text-center" style="background-color: #147040;">
      
     <div class="container">
         <div class="row">
             <div class="col-md-4 mb-4">
-                <h5 class="text-white fw-bold mb-3">營業時間</h5>
+                <h5 class="text-white fw-bold mb-3">{% translate "Business Hours" %}</h5>
                 <p class="small text-white" style="line-height: 1.8;">
-                星期一至日   11:00 - 22:00 <br>
-                公眾假期     11:00 - 22:00 <br>
-                公眾假期前夕  11:00 - 22:00
+                {% translate "Monday to Sunday" %}   11:00 - 22:00 <br>
+                {% translate "Public Holidays" %}     11:00 - 22:00 <br>
+                {% translate "Public Holidays Eve" %}  11:00 - 22:00
                 </p>
             </div>
             <div class="col-md-2 mb-4">
-                <h6 class="text-white fw-bold mb-3">Navigation</h6>
+                <h6 class="text-white fw-bold mb-3">{% translate "Navigation" %}</h6>
                 <ul class="list-unstyled small">
-                    <li class="mb-2"><a href="/" class="text-white text-decoration-none hover-white">Home</a></li>
-                    <li class="mb-2"><a href="/menu" class="text-white text-decoration-none hover-white">Full Menu</a></li>
-                    <li class="mb-2"><a href="#comments-section" class="text-white text-decoration-none hover-white">Reviews</a></li>
+                    <li class="mb-2"><a href="/" class="text-white text-decoration-none hover-white">{% translate "Home" %}</a></li>
+                    <li class="mb-2"><a href="/menu" class="text-white text-decoration-none hover-white">{% translate "Full Menu" %}</a></li>
+                    <li class="mb-2"><a href="#comments-section" class="text-white text-decoration-none hover-white">{% translate "Reviews" %}</a></li>
                 </ul>
             </div>
             <div class="col-md-3 mb-4 ms-auto">
-                <h6 class="text-white fw-bold mb-3">Visit Us</h6>
+                <h6 class="text-white fw-bold mb-3">{% translate "Visit Us" %}</h6>
                 <ul class="list-unstyled small text-white">
-                    <li class="mb-2"><i class="bi bi-geo-alt me-2 text-primary"></i> 觀塘觀塘道518號創紀之城五期(apm)大堂高層UC-1號舖</li>
+                    <li class="mb-2"><i class="bi bi-geo-alt me-2 text-primary"></i> {% translate "Shop UC-1, UC/F, Millennium City 5 (apm), 518 Kwun Tong Road, Kwun Tong" %}</li>
                     <li class="mb-2"><i class="bi bi-telephone me-2 text-primary"></i> +852 63006168</li>
                 </ul>
             </div>
         </div>
         <div class="border-top border-secondary pt-4 mt-4 text-center small text-white">
-            &copy; 2026 . All rights reserved.
+            &copy; 2026 . {% translate "All rights reserved" %}.
         </div>
     </div>
 
