--- a/templates/product/detail.html
+++ b/templates/product/detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% load static %}
 {% load humanize %}
 
@@ -84,7 +85,7 @@
             <div class="col-lg-5">
                 <nav aria-label="breadcrumb" class="mb-3">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="/" class="text-decoration-none text-primary">Menu</a></li>
+                        <li class="breadcrumb-item"><a href="/" class="text-decoration-none text-primary">{% translate "Menu" %}</a></li>
                         <li class="breadcrumb-item active text-muted">{{ product.category }}</li>
                     </ol>
                 </nav>
