erb8 project langauage

--- a/templates/accounts/password_change_done.html
+++ b/templates/accounts/password_change_done.html
@@ -1,14 +1,15 @@
 {% extends "base.html" %}
+{% load i18n %}
 
-{% block title %}Password changed{% endblock %}
+{% block title %}{% translate "Password changed" %}{% endblock %}
 
 {% block content %}
   
   <div class="container" style="height:100%;">
-    <h1>Password changed</h1>
+    <h1>{% translate "Password changed</h1>
     <div class="row" style="height:600px;">
         <div class="col-md-6">
-            <p>Your password has been successfully changed. You can <a href="{% url "accounts:login" %}">log in now</a></p>
+            <p>{% translate "Your password has been successfully changed. You can" %} <a href="{% url "accounts:login" %}">{% translate "log in now" %}</a></p>
         </div>
     </div>
   </div>
