--- a/templates/accounts/change_password_done.html
+++ b/templates/accounts/change_password_done.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
+{% load i18n %}
 
-{% block title %}Password Changed Successfully{% endblock %}
+{% block title %}{% translate "Password Changed Successfully" %}{% endblock %}
 
 {% block content %}
 <div class="container py-5">
@@ -8,22 +9,22 @@
         <div class="col-md-6 col-lg-5">
             <div class="card shadow text-center">
                 <div class="card-header bg-success text-white">
-                    <h4 class="mb-0"><i class="fas fa-check-circle me-2"></i>Success!</h4>
+                    <h4 class="mb-0"><i class="fas fa-check-circle me-2"></i>{% translate "Success" %}!</h4>
                 </div>
                 <div class="card-body p-5">
                     <div class="mb-4">
                         <i class="fas fa-check-circle fa-5x text-success"></i>
                     </div>
-                    <h3 class="card-title mb-3">Password Changed Successfully</h3>
+                    <h3 class="card-title mb-3">{% translate "Password Changed Successfully" %}</h3>
                     <p class="card-text mb-4">
-                        Your password has been updated successfully. You can now use your new password to log in.
+                        {% translate "Your password has been updated successfully. You can now use your new password to log in" %}.
                     </p>
                     <div class="d-grid gap-2">
                         <a href="{% url 'accounts:login' %}" class="btn btn-primary">
-                            <i class="fas fa-user me-2"></i>Go to Login
+                            <i class="fas fa-user me-2"></i>{% translate "Go to Login" %}
                         </a>
                         <a href="{% url 'pages:product_list' %}" class="btn btn-outline-secondary">
-                            <i class="fas fa-home me-2"></i>Return to Product List
+                            <i class="fas fa-home me-2"></i>{% translate "Return to Product List" %}
                         </a>
                     </div>
                 </div>
