--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,6 +1,7 @@
 {% extends 'base.html'%}
+{% load i18n %}
 <!-- tab title -->
- {% block title%} | Login {% endblock %}
+ {% block title%} | {% translate "Login" %} {% endblock %}
 {% block content%}
 
 <section id="login" class="bg-light py-5">
@@ -10,15 +11,15 @@
         {% include 'partials/_alert.html' %}
         <div class="card">
           <div class="card-header bg-primary text-white">
-            <h4><i class="fas fa-sign-in-alt"></i> Login</h4>
+            <h4><i class="fas fa-sign-in-alt"></i> {% translate "Login" %}</h4>
           </div>
           <div class="card-body">
             
-            <p>Please use the following form to log-in. If you don't have an account <a href="{% url "accounts:register" %}">register here</a>.</p>
+            <p>{% translate "Please use the following form to log-in. If you don't have an account" %} <a href="{% url "accounts:register" %}">{% translate "register here" %}</a>.</p>
             <form action="{% url 'accounts:login' %}" method="POST">
               {% csrf_token %}
               <div class="form-group">
-                <label for="username">Username</label>
+                <label for="username">{% translate "Username" %}</label>
                 <input
                     type="text"
                     name="username"
@@ -28,7 +29,7 @@
               </div>
 
               <div class="form-group">
-                <label for="password2">Password</label>
+                <label for="password2">{% translate "Password" %}</label>
                 <input
                     type="password"
                     name="password"
@@ -39,12 +40,12 @@
 
               <input
                 type="submit"
-                value="Login"
+                value="{% translate 'Login' %}"
                 class="btn btn-secondary btn-block"
               />
             </form>
             <p></p>
-            <p><a href="{% url "accounts:reset_password" %}">Forgotten your password?</a></p>
+            <p><a href="{% url "accounts:reset_password" %}">{% translate "Forgotten your password?" %}</a></p>
           </div>
         </div>
       </div>
