--- a/templates/accounts/password_change.html
+++ b/templates/accounts/password_change.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load i18n %}
 
 {% block content %}
 <div class="container mt-5">
@@ -6,7 +7,7 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <h3 class="text-center">Change Password</h3>
+                    <h3 class="text-center">{% translate "Change Password" %}</h3>
                 </div>
                 <div class="card-body">
                     {% if messages %}
@@ -31,26 +32,26 @@
                         {% endif %}
                         
                         <div class="form-group mb-3">
-                            <label for="{{ form.old_password.id_for_label }}">Current Password</label>
+                            <label for="{{ form.old_password.id_for_label }}">{% translate "Current Password" %}</label>
                             {{ form.old_password }}
                         </div>
                         
                         <div class="form-group mb-3">
-                            <label for="{{ form.new_password1.id_for_label }}">New Password</label>
+                            <label for="{{ form.new_password1.id_for_label }}">{% translate "New Password" %}</label>
                             {{ form.new_password1 }}
                             <small class="form-text text-muted">
-                                Password must be at least 8 characters long.
+                                {% translate "Password must be at least 8 characters long" %}.
                             </small>
                         </div>
                         
                         <div class="form-group mb-3">
-                            <label for="{{ form.new_password2.id_for_label }}">Confirm New Password</label>
+                            <label for="{{ form.new_password2.id_for_label }}">{% translate "Confirm New Password" %}</label>
                             {{ form.new_password2 }}
                         </div>
                         
                         <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-primary">Change Password</button>
-                            <a href="{% url 'pages:product_list' %}" class="btn btn-secondary">Cancel</a>
+                            <button type="submit" class="btn btn-primary">{% translate "Change Password" %}</button>
+                            <a href="{% url 'pages:product_list' %}" class="btn btn-secondary">{% translate "Cancel" %}</a>
                         </div>
                     </form>
                 </div>
