--- a/templates/accounts/password_reset_complete.html
+++ b/templates/accounts/password_reset_complete.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
+{% load i18n %}
 
-{% block title %}Password reset{% endblock %}
+{% block title %}{% translate "Password reset" %}{% endblock %}
 
 {% block content %}
   <div class="container" style="height:100%;">
-    <h1>Password set</h1>
-    <p>Your password has been set. You can <a href="{% url "accounts:login" %}">log in now</a></p>
+    <h1>{% translate "Password reset" %}</h1>
+    <p>{% translate "Your password has been reset. You can" %} <a href="{% url "accounts:login" %}">{% translate "log in now" %}</a></p>
   </div>
 {% endblock %}
