--- a/templates/accounts/password_reset_done.html
+++ b/templates/accounts/password_reset_done.html
@@ -1,14 +1,15 @@
 {% extends "base.html" %}
+{% load i18n %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}{% translate "Reset your password" %} {% endblock %}
 
 {% block content %}
   <div class="container" style="height:100%;">
-    <h1>Reset your password</h1>
+    <h1>{% translate "Reset your password" %} </h1>
     <div class="row" style="height:600px;">
         <div class="col-md-6">
-             <p>We've emailed you instructions for setting your password.</p>
-            <p>If you don't receive an email, please make sure you've entered the address you registered with.</p>
+             <p>{% translate "We've emailed you instructions for setting your password" %} .</p>
+            <p>{% translate "If you don't receive an email, please make sure you've entered the address you registered with" %} .</p>
         </div>
     </div>
   </div>
