--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -1,6 +1,7 @@
 {% extends 'base.html'%}
+{% load i18n %}
 <!-- tab title -->
- {% block title%} | Login {% endblock %}
+ {% block title%} | {% translate "Login" %} {% endblock %}
 {% block content%}
 
 <h1>{{user.username}}</h1>
