--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,6 +1,7 @@
 {% extends 'base.html'%}
+{% load i18n %}
 <!-- tab title -->
- {% block title%} | Register {% endblock %}
+ {% block title%} | {% translate "Register" %} {% endblock %}
 {% block content%}
 <section id="register" class="bg-light py-5">
       <div class="container">
@@ -9,18 +10,18 @@
             {% include 'partials/_alert.html' %}
             <div class="card">
               <div class="card-header bg-primary text-white">
-                <h4><i class="fas fa-user-plus"></i> Register</h4>
+                <h4><i class="fas fa-user-plus"></i> {% translate "Register" %}</h4>
               </div>
               <div class="card-body">
                 <form action="{% url 'accounts:register' %}" method='POST'>
                     {% csrf_token %}
                     <div class="form-group">
-                        <label for="first_name">First Name</label>
+                        <label for="first_name">{% translate "First Name" %}</label>
                         {% comment %} <input id="first_name"  type="text"  name="first_name"  class="form-control"  required/> {% endcomment %}
                         <input id="first_name"  type="text"  name="first_name"  class="form-control"  required/>
                     </div>
                     <div class="form-group">
-                        <label for="last_name">Last Name</label>
+                        <label for="last_name">{% translate "Last Name" %}</label>
                         <input
                             id="last_name"
                             type="text"
@@ -30,7 +31,7 @@
                         />
                     </div>
                     <div class="form-group">
-                        <label for="username">Username</label>
+                        <label for="username">{% translate "Username" %}</label>
                         <input
                             id="username"
                             type="text"
@@ -40,7 +41,7 @@
                         />
                     </div>
                     <div class="form-group">
-                        <label for="email">Email</label>
+                        <label for="email">{% translate "Email" %}</label>
                         <input
                         id="email"
                             type="email"
@@ -50,7 +51,7 @@
                         />
                     </div>
                     <div class="form-group">
-                        <label for="password">Password</label>
+                        <label for="password">{% translate "Password" %}</label>
                         <input
                         id="password"
                             type="password"
@@ -60,7 +61,7 @@
                         />
                     </div>
                     <div class="form-group">
-                        <label for="password2">Confirm Password</label>
+                        <label for="password2">{% translate "Confirm Password" %}</label>
                         <input
                             id="password2"
                             type="password"
@@ -71,7 +72,7 @@
                     </div>
                     <input
                         type="submit"
-                        value="Register"
+                        value="{% translate 'Register' %}"
                         class="btn btn-secondary btn-block"
                     />
                 </form>
