--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -93,7 +93,7 @@
 
         <main class="col-lg-9">
             <div class="row g-4 animate-list">
-                {% for product in products %}
+                {% for product in page.object_list %}
                 <div class="col-md-6 col-xl-4">
                     <div class="card h-100 border-0 shadow-sm rounded-4 overflow-hidden transition-hover">
                         <div class="position-relative">
@@ -124,7 +124,73 @@
             </div>
         </main>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+    <div class="row">
+      <div class="col-md-12">
+        {% if page.has_other_pages %}
+        <ul class="pagination">
+          {% if page.has_previous %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ page.previous_page_number }}">&laquo;</a>
+          </li>
+          {% else %}
+          <li class="page-item disabled">
+            <a class="page-link" href="#">&laquo;</a>
+          </li>
+          {% endif %}
+          <!-- for loop page number -->
+          {% for i in page.paginator.page_range %}
+          <!-- page number -->
+          {% if page.number == i %}
+          <li class="page-item active">
+            <a class="page-link">{{ i }}</a>
+          </li>
+          {% else %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+          </li>
+          {% endif %}
+          {% endfor %}
+          {% if page.has_next %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ page.next_page_number }}">&raquo;</a>
+          </li>
+          {% else %}
+          <li class="page-item disabled">
+            <a class="page-link" href="#">&raquo;</a>
+          </li>
+          {% endif %}
+        </ul>
+        {% endif %}
+      </div>
+    </div>
+
+
+
+
+
 </div>
+
+
+
+
+
+
+
+
+
+
+
 
 <script>
     document.addEventListener('DOMContentLoaded', function() {
