Home style adjust

--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -29,19 +29,19 @@
                 </ul>
               </div>
 
-              <a href="#">
+              <a href="#" hidden>
                 <i class="fab fa-twitter"></i>
               </a>
-              <a href="#">
+              <a href="#" hidden>
                 <i class="fab fa-facebook"></i>
               </a>
-              <a href="#">
+              <a href="#" hidden>
                 <i class="fab fa-linkedin"></i>
               </a>
-              <a href="#">
+              <a href="#" hidden>
                 <i class="fab fa-instagram"></i>
               </a>
-              <a href="#">
+              <a href="#" hidden>
                 <i class="fab fa-pinterest"></i>
               </a>
             </div>
