--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -204,7 +204,7 @@
     </div>
 </section> {% endcomment %}
 
-<section class="bg-dark text-white py-5 mt-5">
+<section class="bg-dark text-white py-5 mt-5" hidden>
     <div class="container">
         <div class="row">
             <div class="col-md-4 mb-4">
