--- a/templates/partials/_alert.html
+++ b/templates/partials/_alert.html
@@ -7,7 +7,7 @@
             
             <strong>{{ message.tags|title }}:</strong> {{ message }}
             
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"><i class="fas fa-window-close"></i></button>
         </div>
     </div>
     {% endfor %}
