--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,6 +1,7 @@
 {% load i18n %}
 <!-- Footer -->
-  <section class="bg-dark text-white py-5 mt-5">
+ <footer>
+  <section class="text-white py-5 mt-5" style="background-color: #147040;">
     <div class="container">
         <div class="row">
             <div class="col-md-4 mb-4">
